--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,20 @@
     <title>O lendário guerreiro</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <main>
-        <div>
+        <div CLASS="passo ativo" id="passo-0">
             <img src="" alt="">
-        <p></p>
-        <button></button>
-        <button></button>
+            <p>O reino de Noxia está à beira do colapso. Antigas forças sombrias despertaram nas profundezas da terra,
+                ameaçando destruir a paz que reinou por séculos. Você, Erya, é uma jovem guerreira com uma linhagem
+                misteriosa que carrega um poder ancestral. No entanto, você não sabe se essa força é um presente ou uma
+                maldição. Com o destino do mundo em suas mãos, você deverá tomar decisões difíceis para salvar ou
+                condenar Noxia.</p>
+                <button class="btn-proximo" data-proximo="1">seguir</button>
+                <button class="btn-proximo" data-proximo="2">seguir</button>
         </div>
     </main>
 </body>
+
 </html>
