--- a/index.html
+++ b/index.html
@@ -18,10 +18,28 @@
                 misteriosa que carrega um poder ancestral. No entanto, você não sabe se essa força é um presente ou uma
                 maldição. Com o destino do mundo em suas mãos, você deverá tomar decisões difíceis para salvar ou
                 condenar Noxia.</p>
-                <button class="btn-proximo" data-proximo="1">seguir</button>
-                <button class="btn-proximo" data-proximo="2">seguir</button>
+            <button class="btn-proximo" data-proximo="1">seguir</button>
+        </div>
+        <div CLASS="passo ativo" id="passo-1">
+            <img src="" alt="">
+            <p>Você acorda em uma caverna escura, sem lembrar de como chegou ali. Seu único companheiro é um antigo
+                amuleto, que brilha fraco, sugerindo que você deve seguir um caminho específico.</p>
+            <button class="btn-proximo" data-proximo="1">Seguir o brilho do amuleto e explorar a caverna.</button>
+            <button class="btn-proximo" data-proximo="1">Ignorar o amuleto e tentar sair da caverna por outra
+                direção.</button>
+        </div>
+        <div CLASS="passo ativo" id="passo-2">
+            <img src="" alt="">
+            <p>Você segue o brilho do amuleto e encontra uma porta secreta. Ao abrir, descobre uma sala cheia de livros
+                antigos e um mapa que indica a localização do Portão das Sombras, onde se acredita que o mal esteja se
+                originando. No entanto, você sente uma presença sombria observando você.</p>
+            <button class="btn-proximo" data-proximo="1">Tentar encontrar mais informações nos livros antes de seguir
+                para o Portão.</button>
+            <button class="btn-proximo" data-proximo="1">Examinar o mapa e seguir para o Portão das Sombras
+                imediatamente.</button>
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
