--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <img src="" alt="">
             <p>Você acorda em uma caverna escura, sem lembrar de como chegou ali. Seu único companheiro é um antigo
                 amuleto, que brilha fraco, sugerindo que você deve seguir um caminho específico.</p>
-            <button class="btn-proximo" data-proximo="1">Seguir o brilho do amuleto e explorar a caverna.</button>
-            <button class="btn-proximo" data-proximo="1">Ignorar o amuleto e tentar sair da caverna por outra
+            <button class="btn-proximo" data-proximo="2">Seguir o brilho do amuleto e explorar a caverna.</button>
+            <button class="btn-proximo" data-proximo="3">Ignorar o amuleto e tentar sair da caverna por outra
                 direção.</button>
         </div>
         <div CLASS="passo ativo" id="passo-2">
@@ -33,10 +33,59 @@
             <p>Você segue o brilho do amuleto e encontra uma porta secreta. Ao abrir, descobre uma sala cheia de livros
                 antigos e um mapa que indica a localização do Portão das Sombras, onde se acredita que o mal esteja se
                 originando. No entanto, você sente uma presença sombria observando você.</p>
-            <button class="btn-proximo" data-proximo="1">Tentar encontrar mais informações nos livros antes de seguir
+            <button class="btn-proximo" data-proximo="4">Tentar encontrar mais informações nos livros antes de seguir
                 para o Portão.</button>
-            <button class="btn-proximo" data-proximo="1">Examinar o mapa e seguir para o Portão das Sombras
+            <button class="btn-proximo" data-proximo="5">Examinar o mapa e seguir para o Portão das Sombras
                 imediatamente.</button>
+        </div>
+        <div CLASS="passo ativo" id="passo-3">
+            <img src="" alt="">
+            <p>Você ignora o mapa e decide explorar mais a caverna. Após algumas horas, você encontra
+                uma cidade abandonada, mas cheia de pistas sobre antigos habitantes e uma força que poderia restaurar a
+                paz no reino. Você encontra um artefato que, ao tocá-lo, revela a imagem de um dragão dourado, um
+                guardião
+                antigo de Noxia.</p>
+            <button class="btn-proximo" data-proximo="6">Voltar à caverna e seguir o amuleto, confiando que ele a guiará
+                melhor.</button>
+            <button class="btn-proximo" data-proximo="7">Proseguir em direção à cidade em busca de mais
+                respostas.</button>
+            para o Portão.</button>
+        </div>
+        <div CLASS="passo ativo" id="passo-4">
+            <img src="" alt="">
+            <p>Você encontra o artefato antigo que revela a verdadeira natureza de sua linhagem. Ao retornar ao centro
+                do reino, você invoca o Dragão Dourado, que surge das profundezas e começa a purificar as forças
+                sombrias. O dragão lhe oferece a chance de se tornar seu novo guardião, protegendo Noxia para sempre e
+                preservando seu nome na história, mas isso significaria perder a liberdade.</p>
+            <button class="btn-proximo" data-proximo="8">Recusar o poder do dragão, buscando um futuro onde a humanidade
+                possa salvar Noxia sem depender de seres mitológicos.</button>
+            <button class="btn-proximo" data-proximo="9">Aceitar se tornar o novo Guardião do Dragão e proteger Noxia
+                eternamente.</button>
+        </div>
+        <div CLASS="passo ativo" id="passo-5">
+            <img src="" alt="">
+            <p>Você encontra o Portão das Sombras e, ao enfrentá-lo, descobre que o mal é uma entidade que possui seu
+                próprio corpo e alma. No entanto, ela está ligada à sua linhagem e, se destruí-la, você também destruirá
+                parte de si mesma. Agora, você tem que decidir se se sacrifica para eliminar a entidade, sabendo que
+                isso apagará sua existência no reino, ou se tenta controlar a entidade, correndo o risco de ser
+                corrompida por ela.</p>
+            <button class="btn-proximo" data-proximo="10">Tentar controlar a entidade e lutar contra sua própria
+                corrupção.</button>
+            <button class="btn-proximo" data-proximo="11">Sacrificar-se para salvar Noxia.</button>
+        </div>
+        <div CLASS="passo ativo" id="passo-6">
+            <img src="" alt="">
+            <p>O Retorno do Guardião: Noxia floresce sob a proteção do Dragão Dourado e de sua nova guardiã, Erya, que,
+                embora tenha se tornado imortal, vive com o peso da escolha que fez. A liberdade da humanidade está
+                garantida, mas à custa de um eterno compromisso com a força mitológica.</p>
+            <button class="btn-proximo" data-proximo="12">Final</button>
+        </div>
+        <div CLASS="passo ativo" id="passo-7">
+            <img src="" alt="">
+            <p>O Sacrifício Final: Erya desaparece, mas seu sacrifício garante que o mal nunca mais retorne a Noxia. O
+                reino se ergue das cinzas, e sua história é contada por gerações, embora ninguém saiba exatamente o que
+                aconteceu com você.</p>
+            <button class="btn-proximo" data-proximo="13">Final</button>
         </div>
     </main>
     <script src="script.js"></script>
